Add basic singleton implementation for DepthSenseDeviceManager

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ add_definitions(
 )
 
 add_executable(grabber
+  src/depth_sense/depth_sense_device_manager.cpp
   src/depth_sense_grabber.cpp
   src/grabber.cpp
 )
