--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ add_executable(depth_sense_viewer
   src/depth_sense/depth_sense_device_manager.cpp
   src/depth_sense_grabber.cpp
   src/depth_sense_viewer.cpp
+  src/io_exception.cpp
 )
 target_link_libraries(depth_sense_viewer
   ${PCL_LIBRARIES}
@@ -40,6 +41,7 @@ add_executable(multi_grabber
   src/depth_sense/depth_sense_device_manager.cpp
   src/depth_sense_grabber.cpp
   src/multi_grabber.cpp
+  src/io_exception.cpp
 )
 target_link_libraries(multi_grabber
   ${PCL_LIBRARIES}
